2006-08-23  Karl Berry  <karl@gnu.org>

	* Pretest version 2.1.92.

2006-08-20  Karl Berry  <karl@gnu.org>

	* Pretest version 2.1.91.

2006-08-13  gettextize  <bug-gnu-gettext@gnu.org>

	* gnulib/m4/longlong.m4: Upgrade to gettext-0.15.
	* gnulib/m4/ulonglong.m4: Upgrade to gettext-0.15.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.15.

2006-08-09  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_PROG_RANLIB): not needed, it's done in gl_EARLY.
	From Bruno.

2006-07-16  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_HEADER_STDC): autoconf doc says no longer needed.

	* configure.ac (AM_INIT_AUTOMAKE): remove check-news.
	* Makefile.am (EXTRA_DIST): no more bugs; simplfy other ex

2006-05-08  Karl Berry  <karl@gnu.org>

	* autogen.sh: rename from bootstrap and change msg.
	Suggestion from Bruno Haible.

2006-02-14  Karl Berry  <karl@gnu.org>

	* configure.ac (gl_SOURCE_BASE,gl_M4_BASE): delete, these are
	passed only on the cmdline now (and cached).

2005-05-28  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add build-aux/mkinstalldirs.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.14.5.

2005-04-23  Karl Berry  <karl@gnu.org>

	* po/Makevars (MSGID_BUGS_ADDRESS): change to bug-hello@gnu.org.

	* src/hello.c (locale.h): unconditionally include, everything has
	this now.
	* m4/Makefile.am: remove, no longer needed.
	* intl/*: remove, we'll use [external] gettext.
	* configure.ac (AC_FUNC_ALLOCA): add.
	(AC_CONFIG_FILES): no m4 or intl.
	* Makefile.am (SUBDIRS): no m4 or intl.

2005-03-27  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AC_CONFIG_FILES): Add intl/Makefile.

2005-03-20  Karl Berry  <karl@gnu.org>

	* README, README-alpha, NEWS, THANKS, AUTHORS: text updates.
	* README.dev: new file.

2004-05-16  Karl Eichwalder  <ke@gnu.franken.de>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Add.

2002-07-20  Karl Eichwalder  <keichwa@gmx.net>

	* Makefile.am (DISTCLEANFILES): New variable, add stamp-h created
	by configure.
